feat: add icons

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,5 @@
 <header class="header">
-  Vashchayeva Maryia test task
+  <h2 class="header__author">
+    Vashchayeva Maryia test task
+  </h2>
 </header>
