--- a/src/app/components/slider/slider.component.html
+++ b/src/app/components/slider/slider.component.html
@@ -1,1 +1,8 @@
-<p>slider works!</p>
+<div class="slider">
+  <div class="slider__img-wrap">
+    <i
+      style="color: {{color}}; font-size: 10rem;"
+      class="fa fa-{{icon}} fa-2x1"></i>
+  </div>
+  <button class="slider__button">Click for change</button>
+</div>
