--- a/src/assets/_variable.scss
+++ b/src/assets/_variable.scss
@@ -1,5 +1,5 @@
 $maxAppWidth: 1200px;
-$mainColor: #AA2A53;
+$mainColor: #6bbe21;
 $mainColorDark: #469400;
 $mainColorFont: #244d01;
 $mainColorLight: #d4ecbf;
