--- a/src/app/components/slider/slider.component.scss
+++ b/src/app/components/slider/slider.component.scss
@@ -11,6 +11,7 @@
     gap: 2rem;
 
     &__img-wrap {
+      position: relative;
       width: 360px;
       height: 360px;
       padding: 2rem;
@@ -19,7 +20,15 @@
       justify-content: center;
       border-radius: 0.4rem;
       box-shadow: 0px 0px 8px rgba($color: #000000, $alpha: 0.2);
+
+      &__timer {
+        position: absolute;
+        font-size: 5rem;
+        transition: all .3s;
+      }
     }
+
+
 
     &__button {
       padding: 0.6rem 0.8rem;
